--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,44 @@ services:
             - datasync_network
         restart: unless-stopped
 
+    # PHP-FPM Application
+    php:
+        build:
+            context: .
+            dockerfile: docker/php/Dockerfile
+        container_name: datasync_php
+        volumes:
+            - ./:/var/www/html
+            - ./docker/php/php.ini:/usr/local/etc/php/php.ini
+        environment:
+            - DB_CONNECTION=mysql
+            - DB_HOST=mysql
+            - DB_PORT=3306
+            - DB_DATABASE=${DB_DATABASE}
+            - DB_USERNAME=${DB_USERNAME}
+            - DB_PASSWORD=${DB_PASSWORD}
+            - PGSQL_HOST=postgres
+            - PGSQL_PORT=5432
+            - PGSQL_DATABASE=${PGSQL_DATABASE}
+            - PGSQL_USERNAME=${PGSQL_USERNAME}
+            - PGSQL_PASSWORD=${PGSQL_PASSWORD}
+            - MONGO_HOST=mongodb
+            - MONGO_PORT=27017
+            - MONGO_DATABASE=${MONGO_DATABASE}
+            - MONGO_USERNAME=${MONGO_USERNAME}
+            - MONGO_PASSWORD=${MONGO_PASSWORD}
+            - REDIS_HOST=redis
+            - REDIS_PORT=6379
+        depends_on:
+            - mysql
+            - postgres
+            - mongodb
+            - redis
+        networks:
+            - datasync_network
+        restart: unless-stopped
+
+
 
 networks:
     datasync_network:
