--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,24 @@ services:
             - datasync_network
         restart: unless-stopped
 
+    # MySQL Database (Auth, Users, Wallet, Payments)
+    mysql:
+        image: mysql:8.0
+        container_name: datasync_mysql
+        ports:
+            - "3306:3306"
+        environment:
+            MYSQL_DATABASE: ${DB_DATABASE}
+            MYSQL_USER: ${DB_USERNAME}
+            MYSQL_PASSWORD: ${DB_PASSWORD}
+            MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+        volumes:
+            - mysql_data:/var/lib/mysql
+            - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+        networks:
+            - datasync_network
+        restart: unless-stopped
+        command: --default-authentication-plugin=mysql_native_password
 
 
 networks:
