--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,6 +108,20 @@ services:
             - datasync_network
         restart: unless-stopped
 
+    # Redis Cache & Queue
+    redis:
+        image: redis:7-alpine
+        container_name: datasync_redis
+        ports:
+            - "6379:6379"
+        volumes:
+            - redis_data:/data
+            - ./docker/redis/redis.conf:/usr/local/etc/redis/redis.conf
+        networks:
+            - datasync_network
+        restart: unless-stopped
+        command: redis-server /usr/local/etc/redis/redis.conf
+
 
 
 networks:
