--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,6 +122,27 @@ services:
         restart: unless-stopped
         command: redis-server /usr/local/etc/redis/redis.conf
 
+    # Queue Worker
+    queue:
+        build:
+            context: .
+            dockerfile: docker/php/Dockerfile
+        container_name: datasync_queue
+        volumes:
+            - ./:/var/www/html
+        environment:
+            - DB_CONNECTION=mysql
+            - DB_HOST=mysql
+            - REDIS_HOST=redis
+            - QUEUE_CONNECTION=redis
+        depends_on:
+            - mysql
+            - redis
+        networks:
+            - datasync_network
+        restart: unless-stopped
+        command: php artisan queue:work --tries=3 --timeout=90
+
 
 
 networks:
