--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -143,7 +143,34 @@ services:
         restart: unless-stopped
         command: php artisan queue:work --tries=3 --timeout=90
 
+    # Scheduler (Cron)
+    scheduler:
+        build:
+            context: .
+            dockerfile: docker/php/Dockerfile
+        container_name: datasync_scheduler
+        volumes:
+            - ./:/var/www/html
+        environment:
+            - DB_CONNECTION=mysql
+            - DB_HOST=mysql
+        depends_on:
+            - mysql
+        networks:
+            - datasync_network
+        restart: unless-stopped
+        command: sh -c "while true; do php artisan schedule:run --verbose --no-interaction & sleep 60; done"
 
+    # MailHog (Development Email Testing)
+    mailhog:
+        image: mailhog/mailhog:latest
+        container_name: datasync_mailhog
+        ports:
+            - "1025:1025"  # SMTP
+            - "8025:8025"  # Web UI
+        networks:
+            - datasync_network
+        restart: unless-stopped
 
 networks:
     datasync_network:
