permissions xatosi ham togrilandi

--- a/docker/php/www.conf
+++ b/docker/php/www.conf
@@ -12,8 +12,8 @@ pm.max_spare_servers = 20
 pm.max_requests = 500
 
 ; Logging
-access.log = /var/log/php-fpm-access.log
-php_admin_value[error_log] = /var/log/php-fpm-error.log
+access.log = /var/www/html/storage/logs/php-fpm-access.log
+php_admin_value[error_log] = /var/www/html/storage/logs/php-fpm-error.log
 php_admin_flag[log_errors] = on
 
 ; Security
