--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,10 @@
     "format": "prettier --write \"src/**/*.{js,jsx,css}\""
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "axios": "^1.6.2"
+    "react-router-dom": "^6.30.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
